traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: value unary_! is not a member of Unit
  while (!positionFinale()){
         ^Snake:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  if (!estFaceMur()) return(false);
                            ^Snake:11: warning: enclosing method positionFinale has result type Unit: return value discarded
  if (!estFaceMur()) return(false);
                     ^Snake:12: error: value Est is not a member of object plm.universe.Direction
  if (getDirection()== Direction.Est){
                                 ^Snake:14: error: not found: value True
    if (estFaceMur()) return True
                             ^Snake:14: warning: enclosing method positionFinale has result type Unit: return value discarded
    if (estFaceMur()) return True
                      ^Snake:16: error: value Ouest is not a member of object plm.universe.Direction
  if (getDirection()== Direction.Ouest){
                                 ^Snake:18: error: not found: value True
    if (estFaceMur()) return True
                             ^Snake:18: warning: enclosing method positionFinale has result type Unit: return value discarded
    if (estFaceMur()) return True
                      ^Snake:26: error: value Ouest is not a member of object plm.universe.Direction
  if (getDirection()== Direction.Ouest){
                                 ^Snake:30: error: value Est is not a member of object plm.universe.Direction
  if (getDirection()== Direction.Est){
                                 ^